# zkp-debugger

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml
assets/: cdf.bnf  test.cdf
assets/dummy-circuit/src/: gadgets.rs  lib.rs
cdf/: CONTRIBUTING.md  Cargo.toml
cdf/examples/: async-dap.rs
cdf/src/: bytes.rs  config.rs  constraint.rs  context.rs  dap.rs  decoder.rs  element.rs  encoder.rs  lib.rs  main.rs  polynomial.rs  preamble.rs  source.rs  witness.rs  zkdb.rs
cdf/src/dap/: tests.rs  types.rs  utils.rs
cdf/src/decoder/: context.rs  display.rs
cdf/src/element/: impls.rs  scalar.rs  tests.rs
cdf/src/encoder/: context.rs  tests.rs
cdf/src/zkdb/: breakpoint.rs  state.rs
cdf/tests/: circuit.rs  dap.rs  decoder.rs  encoding.rs  validate.rs
dusk-plonk-cdf/: Cargo.toml
dusk-plonk-cdf/src/: bytes.rs  config.rs  constraint.rs  context.rs  element.rs  encoder.rs  indexed_witness.rs  lib.rs  polynomial.rs  preamble.rs  source.rs  tests.rs  witness.rs
dusk-plonk-cdf/src/element/: fixed_text.rs  impls.rs  scalar.rs
dusk-plonk-cdf/tests/: circuit.rs  encoding.rs  validate.rs
dusk-plonk-debugger-utils/: Cargo.toml
dusk-plonk-debugger-utils/src/: generator.rs
dusk-plonk-pdb/: Cargo.toml
dusk-plonk-pdb/src/: app.rs  commands.rs
dusk-plonk-pdb/src/app/: tests.rs
dusk-plonk-pdb/src/commands/: command.rs
example-plonk-circuit/: Cargo.toml
example-plonk-circuit/naive-circuit/: Cargo.toml
example-plonk-circuit/naive-circuit/src/: main.rs
example-plonk-circuit/naive-hash/: Cargo.toml
example-plonk-circuit/naive-hash/src/: gadget.rs  native.rs
example-plonk-circuit/naive-signature/: Cargo.toml
example-plonk-circuit/naive-signature/src/: gadget.rs  native.rs
pdb/: Cargo.toml
pdb/src/: app.rs  args.rs  commands.rs  lib.rs  main.rs
pdb/src/app/: config.rs  context.rs  input.rs  output.rs  state.rs  tests.rs
pdb/src/commands/: command.rs  instruction.rs
src/: cdf.rs  lib.rs
src/cdf/: constraint.rs  element.rs  indexed_witness.rs  polynomial.rs  preamble.rs  source.rs  witness.rs
src/cdf/element/: fixed_text.rs  impls.rs  scalar.rs
tcdb/: Cargo.toml
tcdb/src/: app.rs  args.rs  commands.rs  lib.rs
tcdb/src/app/: breakpoint.rs  config.rs  tests.rs
tcdb/src/commands/: command.rs  instruction.rs
tcdb/tests/: app.rs
tests/: circuit.rs  encoding.rs  generator.rs
utils/: Cargo.toml
utils/src/: generator.rs  lib.rs
vscode-zkp-debugger/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
vscode-zkp-debugger/src/: extension.ts
