[package]
name = "dusk-cdf"
version = "0.5.0"
authors = ["Victor Lopez <victor@codx.io>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/zkp-debugger"
readme = "README.md"
description = "PLONK debugger CDF implementation"

[dependencies]
dirs = "4.0"
msgpacker = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
hex = "0.4"
quickcheck = "1.0"
rand = "0.8"
sha2 = "0.10"
tempdir = "0.3"