[package]
name = "dusk-cdf"
version = "0.5.1"
authors = ["Codex Dev <contact@codx.io>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/zkp-debugger"
readme = "README.md"
description = "PLONK debugger CDF implementation"

[dependencies]
dap-reactor = { version = "0.3", optional = true }
msgpacker = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.21", optional = true, features = ["sync"] }
tracing = { version = "0.1", optional = true }
toml-base-config = "0.1.0"

[dev-dependencies]
hex = "0.4"
quickcheck = "1.0"
rand = "0.8"
sha2 = "0.10"
tempdir = "0.3"
tokio = { version = "1.21", features = ["full"] }
tracing-subscriber = { version = "0.2", features = ["env-filter"] }

[features]
default = ["dap"]
dap = ["dap-reactor", "serde_json", "tokio", "tracing"]
