[package]
name = "dusk-cdf"
version = "0.5.0"
authors = ["Codex Dev <contact@codx.io>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/zkp-debugger"
readme = "README.md"
description = "PLONK debugger CDF implementation"

[[bin]]
name = "dusk-cdf-dap"
path = "src/main.rs"
test = false
required-features = ["dap-bin"]

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }
dap-reactor = { version = "0.5", optional = true }
dirs = "4.0"
hex = { version = "0.4", optional = true }
msgpacker = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.21", optional = true, features = ["sync"] }
toml-base-config = "0.1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
hex = "0.4"
quickcheck = "1.0"
rand = "0.8"
sha2 = "0.10"
tempdir = "0.3"
tokio = { version = "1.21", features = ["full"] }

[features]
default = ["dap"]
dap = ["dap-reactor", "hex", "serde_json", "tokio", "tracing"]
dap-bin = ["clap", "tokio/full", "tracing-subscriber"]
