[package]
name = "dusk-pdb"
version = "0.1.0"
authors = ["Victor Lopez <victor@codx.io>"]
edition = "2021"
readme = "README.md"
description = "PLONK debugger CDF implementation"

[dependencies]
bat = "0.21"
clap = { version = "3.2", features = ["derive"] }
crossterm = "0.24"
dirs = "4.0"
dusk-cdf = { path = "../cdf" }
hex = "0.4"
prettytable-rs = "0.8"
rustyline = "9.1"
rustyline-derive = "0.6"
serde = { version = "1.0", features = ["derive"] }
shellwords = "1.1"
termbg = "0.4"
