[package]
name = "dusk-pdb"
version = "0.1.0"
authors = ["Codex Dev <contact@codx.io>"]
edition = "2021"
readme = "README.md"
description = "PLONK debugger CDF implementation"

[dependencies]
bat = "0.22"
clap = { version = "4.0", features = ["derive"] }
dap-reactor = "0.5"
crossterm = "0.25"
dirs = "4.0"
dusk-cdf = { path = "../cdf", features = ["dap"] }
rustyline = "10.0"
rustyline-derive = "0.7"
serde = { version = "1.0", features = ["derive"] }
shellwords = "1.1"
termbg = "0.4"
tokio = { version = "1.21", features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
toml-base-config = "0.1"
