[package]
name = "dusk-tcdb"
version = "0.1.0"
authors = ["Victor Lopez <victor@codx.io>"]
edition = "2021"
readme = "README.md"
description = "PLONK debugger CDF implementation"

[dependencies]
bat = "0.21"
clap = { version = "3.2", features = ["derive"] }
crossterm = "0.24"
dusk-cdf = { path = "../cdf" }
dirs = "4.0"
hex = "0.4"
prettytable-rs = "0.8"
rustyline = "9.1"
rustyline-derive = "0.6"
shellwords = "1.1"

[dev-dependencies]
dusk-zkp-debugger-utils = { path = "../utils" }
