[package]
name = "dusk-zkp-debugger-utils"
version = "0.1.0"
authors = ["Victor Lopez <victor@codx.io>"]
edition = "2021"
readme = "README.md"
description = "PLONK debugger utils"

[dependencies]
dusk-bls12_381 = { version = "0.10", optional = true }
dusk-bytes = { version = "0.1", optional = true }
dusk-cdf = { path = "../cdf" }
rand = "0.8"
sha256 = "1.0"

[[bin]]
name = "generate-dummy-cdf"
required-features = ["generate-dummy-cdf"]

[features]
generate-dummy-cdf = [
    "dusk-bls12_381",
    "dusk-bytes"
]
